--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^10.0.4
+  flutter_local_notifications: ^8.0.0
+  firebase_core: ^1.4.0
 
 dev_dependencies:
   flutter_test:
