--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_messaging: ^10.0.4
   flutter_local_notifications: ^8.0.0
   firebase_core: ^1.4.0
+  audio_service: ^0.17.1
+  just_audio: ^0.9.5
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/ringtones/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
